--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,24 +1,20 @@
-
-
-<h1>編集</h1>
-
-<%= form_for @post, url: { action: :update } do |f| %>
-
-<p>
-  タイトル:<br>
-  <%= f.text_field :title %>
-</p>
-<p>
-  カテゴリ:<br>
-  <%= f.text_field :category %>
-</p>
-<p>
-  内容:<br>
-  <%= f.text_field :body %>
-</p>
-
-
-<%= f.submit "登録" %>
-
-<% end %>
+<div class="col-md-12">
+  <h1><%= @post.title %></h1>
+  <%= form_for @post, url:{action: :update} do |f| %>
+    <div class="form-group">
+      <label for="form-title">記事タイトル</label>
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <label for="blog_body">本文</label>
+      <%= f.text_area :body, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label "カテゴリ" %><br>
+      <%= f.collection_select(:category_id, Category.all, :id, :title, class: "form-control") %>
+    </div>
+    <%= f.submit '更新する', class: "btn btn-primary" %>
+    <%= link_to '削除する', post_path, method: :delete, class: "btn btn-danger" %>
+  <% end -%>
+</div>
 
