ApplicationHelper, showのカテゴリ欄を変更しました

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/posts">ぶろぐ</a>
-       <li><a href="/posts/new">投稿する</a></li>
+      <a class="navbar-brand" href="/posts/new">投稿する</a>
     </div>
   </div>
 </nav>
