--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <h1><%= @post.title %></h1>
-  <p>カテゴリ：<%= @post.category %></p>
+  <p>カテゴリ：<%= find_category_title(@post.category_id) %></p>
   <p>投稿日：<%= @post.created_at %></p>
   <hr>
   <p>
