--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,8 +6,8 @@
       <%= f.text_field :title, class: "form-control" %>
     </div>
     <div class="form-group">
-      <%= f.label "カテゴリ" %>
-      <%= f.text_field :category, class: "form-control" %>
+      <%= f.label "カテゴリ" %><br>
+      <%= f.collection_select(:category_id, Category.all, :id, :title, class: "form-control") %>
     </div>
     <div class="form-group">
       <%= f.label "本文" %>
