--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,17 @@
-<div class="col-md-12">
-  <h1><%= @post.title %></h1>
-  <p>カテゴリ：<%= find_category_title(@post.category_id) %></p>
-  <p>投稿日：<%= @post.created_at %></p>
-  <hr>
-  <p>
-    <%= simple_format(@post.body) %>
-  </p>
-  <hr>
-  <a href="/posts/<%= @post.id %>/edit" class="btn btn-default">編集する</a>
-  <%= link_to '削除する', post_path, method: :delete %>
+<div class ="container">
+  <div class ="row">
+    <div class ="col-md-8">
+      <h1><%= @post.title %></h1>
+      <p>カテゴリ：<%= find_category_title(@post.category_id) %></p>
+      <p>投稿日：<%= @post.created_at %></p>
+      <hr>
+      <p>
+        <%= simple_format(@post.body) %>
+      </p>
+      <hr>
+      <a href="/posts/<%= @post.id %>/edit" class="btn btn-default">編集する</a>
+      <%= link_to '削除する', post_path, method: :delete %>
+    </div>
+  </div>
 </div>
 
